# pythonic-peano-arithmetic

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  examples.ipynb  pyproject.toml
numbers/: integer.py  natural_number.1.py  rational.py
peano/: __init__.py  integer.py  logger.py  logging.conf  natural_number.py  polynomial.py  rational.py  utils.py
rings/: polynomial.py  residue_ring_modulo.py
tests/: test_integer.py  test_natural_number.py  test_polynomial.py  test_rational.py
